# project-loved

./: .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  package-lock.json  package.json
.github/workflows/: lint.yml
apps/queue_processor/: Cargo.toml
apps/queue_processor/src/: handling.rs  main.rs
apps/queue_processor/src/queues/: users.rs
apps/server/: Cargo.toml
apps/server/src/: errors.rs  main.rs  service.rs
apps/server/src/extractors/: mod.rs  pagination.rs  session.rs
apps/server/src/routes/: mod.rs  oauth.rs  submissions.rs
apps/server/src/state/: mod.rs  settings.rs
apps/website/: eslint.config.mjs  package.json  tailwind.config.ts
apps/website/src/app/: layout.tsx  page.tsx
apps/website/src/components/: Canvas.tsx  LovedNavbar.tsx  PopoverDemo.tsx
apps/website/src/fonts/: torus.ts
apps/website/src/styles/: globals.css  index.css
migration/src/: lib.rs  m20250227_185441_create_initial_schema.rs  m20250309_083034_submissions.rs  m20250320_153743_sessions.rs
