[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.0", features = ["net", "full"] }
athena = { path = "../../packages/athena" }
dotenvy = "0.15.0"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = "0.99.17"
sea-orm = { version = "1", features = [ 
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros"
] }
redis = "0.29.1"
rosu-v2 = { git = "https://github.com/chlomaki1/rosu-v2", branch = "lazer" }
uuid = { version = "1.15.1", features = [ "v4" ] }
chrono = "0.4.40"
futures-util = "0.3"
querystring = "1.1.0"